[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.9.0"
isort = "^5.13.2"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
# Максимальная длина строки
line-length = 100


[tool.isort]
# максимальная длина строки
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
